...
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{storedLocation.description}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/stored_location_delete"
            android:tint="#444444"
...
