<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/explorar" />
    <item
        android:id="@+id/storedLocationsFragment"
        android:icon="@drawable/ic_list_saved_places"
        android:title="@string/stored_locations" />
    <item
        android:id="@+id/savedPhotosFragment"
        android:icon="@drawable/ic_list_saved_photos"
        android:title="@string/img_guardadas" />
</menu>